# DynamicExplorationGraph

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  readme.md  settings.gradle
cpp/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json.sample  benchmark_comparison.md  benchmark_results.md  cmake-variants.sample.yaml  cmake-variants.yaml.sample  implementation_plan.md  readme.md
cpp/benchmark/: CMakeLists.txt
cpp/benchmark/include/: benchmark.h  build.h  dataset.h  file_io.h  logging.h  stats.h  stopwatch.h
cpp/benchmark/src/: deglib_anns_bench.cpp  deglib_build_and_test.cpp  deglib_build_bench.cpp  deglib_evp_test.cpp  deglib_explore_bench.cpp  deglib_groundtruth.cpp  deglib_phd.cpp  deglib_phd_bench.cpp  deglib_setup_dataset.cpp  deglib_test.cpp  microbench_fp16_l2.cpp
cpp/cmake_modules/: DetectCPUFeatures.cmake
cpp/deglib/: CMakeLists.txt
cpp/deglib/include/: analysis.h  builder.h  concurrent.h  config.h  deglib.h  distances.h  filter.h  graph.h  intrusive_list.h  memory.h  repository.h  search.h  visited_list_pool.h
cpp/deglib/include/distance/: evp_inner_product.h  fp16.h  fp16_evp_asym_inner_product.h  fp16_inner_product.h  fp16_l2.h  fp32_inner_product.h  fp32_l2.h  uint8_l2.h
cpp/deglib/include/flas/: fast_linear_assignment_sorter.h  junker_volgenant_solver.h  map_field.h
cpp/deglib/include/graph/: readonly_graph.h  readonly_graph_external.h  sizebounded_graph.h
cpp/deglib/include/quantization/: evp_quantize.h
cpp/deglib/include_new/: concurrent.h  config.h  deglib.h  filter.h  memory.h  repository.h
cpp/deglib/include_new/graph/: readonly_graph.h  sizebounded_graph.h
cpp/docs/evp_integration/: deglib_include_diff.md  evp_vs_main_diff_analysis.md  overall_plan.md  phase1_results.md  phase1_test_infrastructure.md  phase2_fp16_and_distances.md  phase2_results.md  phase3_evp_quantization.md  phase3_results.md  phase4_graph_structures.md  phase4_results.md  phase5_core_deglib_integration.md  phase5_results.md  phase6_flas_utility.md  phase6_results.md  phase7_benchmarks_cleanup.md  phase7_results.md
cpp/evp/: CMakeLists.txt  asym_microbench.cpp  deglib_evp_microbench.cpp  deglib_evp_test.cpp  evp_bits.h  evp_common.h  evp_microbench.cpp  flas_common.h  fp16_ip_microbench.cpp  fp32_L2_microbench.cpp  fp32_ip_microbench.cpp  hdf5_reader.h  run_evp.cpp  task1.cpp  task2.cpp  task2.md  test_evp.cpp  uint8_L2_microbench.cpp
cpp/evp/flas/: fast_linear_assignment_sorter.hpp  junker_volgenant_solver.hpp  map_field.hpp
cpp/evp/hdf5/: hdf5_heap.h  hdf5_ohdr.h  hdf5_readers.h  hdf5_scan.h  hdf5_snod.h  hdf5_types.h  structure.md
cpp/evp/hdf5/test/: test_dataset_dims_large.cpp  test_integration.cpp  test_integration_large.cpp  test_io.cpp  test_llama_dev.cpp  test_main.cpp  test_ohdr.cpp  test_sanity.cpp  test_sanity_large.cpp
cpp/evp/task1/: README.md  mode1.h  mode2.h  mode3.h  mode4.h  mode5.h  mode6.h  mode7.h  modi1.h  modi2.h  modi3.h  modi4.h  modi5.h  modi6.h  modi7.h
cpp/evp/task2/: README.md  mode1.h  mode2.h  mode3.h  mode4.h  mode5.h
cpp/python-bindings/: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py
cpp/python-bindings/deg_cpp/: deglib_cpp.cpp
cpp/python-bindings/deglib/: __init__.py  analysis.py  benchmark.py  builder.py  datasets.py  distances.py  graph.py  repository.py  search.py  std.py  utils.py
cpp/python-bindings/scripts/: link-lib.sh
cpp/python-bindings/tests/: bench_anns.py  bench_build.py  cpp_test.py  deglib_anns_bench.py  deglib_build_bench.py  deglib_explore_bench.py  graph_test.py  test.py
cpp/sisap/: CMakeLists.txt  sisap.cpp  sisap_common.h  task1.cpp  task1.md  task2.cpp  task2.md
cpp/sisap/flas/: fast_linear_assignment_sorter.hpp
cpp/sisap/flas/test/: test_flas.cpp  test_main.cpp
cpp/sisap/hdf5/: hdf5_btree.h  hdf5_io.h  hdf5_readers.h  hdf5_superblock.h
cpp/sisap/hdf5/test/: test_dataset_dims.cpp  test_sanity.cpp  test_structural.cpp  test_types.cpp
cpp/sisap/task1/: mode1.h  mode2.h  mode3.h  mode4.h  mode5.h  mode6.h  mode7.h
cpp/sisap/task2/: mode1.h  mode2.h  mode3.h  mode4.h  mode5.h  mode6.h  mode7.h
cpp/test/: CMakeLists.txt  test_basic.cpp  test_distances.cpp  test_main.cpp  test_sizebounded_graph.cpp
cpp/test/src/: test_builder.cpp  test_cpu_features.cpp  test_distances.cpp  test_filter.cpp  test_regression.cpp  test_repository.cpp  test_search.cpp  test_visited_list_pool.cpp
cpp/test/src/distance/: test_config_cascade.cpp  test_evp_inner_product.cpp  test_fp16.cpp  test_fp16_evp_asym_inner_product.cpp  test_fp16_inner_product.cpp  test_fp32_inner_product.cpp  test_fp32_l2.cpp  test_helpers.h  test_uint8_l2.cpp
cpp/test/src/flas/: test_flas.cpp
cpp/test/src/graph/: test_readonly_graph_external.cpp  test_sizebounded_graph.cpp
cpp/test/src/quantization/: test_evp_quantize.cpp
python/: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  publish.sh  pyproject.toml  setup.py
python/deg_cpp/: deglib_cpp.cpp
python/deglib/: builder.py  std.py  utils.py
python/docs/: conf.py  index.rst
python/docs/api/: builder.rst  graphs.rst  index.rst
python/docs/api/graphs/: mutable_graph.rst  read_only_graph.rst  search_graph.rst
python/docs/tutorials/: building_graphs.rst  faq.rst  installation.rst  searching.rst
python/docs/usage/: installation.rst  quickstart.rst
python/lib/: .clang-format  CMakeLists.txt  compile.sh
python/lib/deglib/: CMakeLists.txt
python/lib/deglib/include/: analysis.h  builder.h  graph.h  (+1 more)
python/scripts/: recreate-link.sh
python/sift_subset_100k/: sift_groundtruth.ivecs
python/src/deg_cpp/: deglib_cpp.cpp
python/src/deglib/: __init__.py  builder.py  distances.py  graph.py  repository.py  search.py  utils.py
python/src/deglib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/tests/: ECIR_Tuturial_Image_Search.ipynb  bench_anns.py  bench_build.py  bench_explore.py  experiments.py  test_bug.py  test_builder.py  test_graph.py  test_progress_bar.py
python/tests/.ipynb_checkpoints/: ECIR_Tuturial_Image_Search-checkpoint.ipynb
python/tests/notebooks/: ECIR_Tutorial_Image_Search.ipynb
(+225 files in other folders)
